Solved module not loading in story map; added timeout to remove bullets; changed app background color to avoid contrast when story map does not cover all screen

--- a/app/src/css/mx.css
+++ b/app/src/css/mx.css
@@ -6,7 +6,7 @@
 html, body, .full-page {
   height:100%;
   width:100%;
-  background:#FFF;
+  background:#d6d6d6;
   padding:0px;
   margin:0px;
   overflow:hidden;
